--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,7 +18,7 @@ import NavigationSection from '../components/NavigationSection.astro';
 		</section>
 
 		<!-- Navegación fija entre secciones -->
-		<!-- <NavigationSection /> -->
+		<NavigationSection />
 	</main>
 </Layout>
 
