refactor: remove scroll hint button and update tooltip positioning for planets

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -37,9 +37,11 @@
 @keyframes orbit {
   from {
     transform: translate(-50%, -50%) translateX(var(--orbit-radius)) rotate(0deg);
+    transform-origin: calc(-1 * var(--orbit-radius)) 0;
   }
   to {
     transform: translate(-50%, -50%) translateX(var(--orbit-radius)) rotate(360deg);
+    transform-origin: calc(-1 * var(--orbit-radius)) 0;
   }
 }
 
