--- a/src/components/ConstellationSection.astro
+++ b/src/components/ConstellationSection.astro
@@ -279,6 +279,7 @@ import { constellations, constellationCategories } from '../data/constellations'
     width: 100%;
     height: 100vh;
     overflow: hidden;
+    z-index: 10;
   }
 
   /* UI reorganizada */
