--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -35,13 +35,11 @@
 
 /* Animations */
 @keyframes orbit {
-  from {
-    transform: rotate(0deg);
-    transform-origin: 0 0;
+  0% {
+    transform: translate(-50%, -50%) rotate(0deg);
   }
-  to {
-    transform: rotate(360deg);
-    transform-origin: 0 0;
+  100% {
+    transform: translate(-50%, -50%) rotate(360deg);
   }
 }
 
